# hexlet_pytest

./: .coverage  .gitignore  Makefile  README.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
hexlet_pytest/: example.py
hexlet_pytest/scripts/: say_bye.py
tests/: test_capitalize.py  test_code.py  test_stack.py
tests/scripts/: test_say_bye.py
